# fastapi-with-fatmcp-agent

./: README.md  README_zh.md  main.py  pyproject.toml
app/: __init__.py
app/api/: main.py
app/api/routers/: __init__.py  agent.py  mcp_resources.py  mcp_tools.py
app/llm/: __init__.py  base.py  openai.py
app/mcp_server/: __init__.py  base.py  run.py  simple.py
