[project]
name = "fastmcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.2.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
    "openai>=1.13.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
